# ravana

./: .gitignore  .iterative_checkpoint_c1.json  .iterative_checkpoint_c2.json  .iterative_checkpoint_c3.json  .iterative_checkpoint_c4.json  .iterative_checkpoint_c5.json  .iterative_final.json  ANALYSIS_RLM_vs_LLM.md  BRAIN_REPAIR_PLAN.md  EXTERNAL_AUDIT.md  LICENSE  PAPER_DRAFT.md  PYPI_PUBLISHING.md  RAVANA_DEV_PLAN.md  RAVANA_STATUS.md  README.md  REGEX_USAGE_REPORT.txt  _apply_bilinear_fix.py  _apply_concept_bilinear.py  _apply_embedding_bilinear.py  _apply_encoder_bilinear.py  _debug.py  _fix_relation_aware.py  _run_train.py  _speedtest.py  ablation_results.json  build_and_publish.sh  cognitive_trace.json  cognitive_trace.md  commit_msg.txt  comparison_results.json  compression_trace.json  compression_trace.md  conftest.py  debug_graph.py  debug_learn.py  demo_architecture.py  diagnose_transfer.py  eval_fair.py  experiment_adversarial.py  (+77 more)
ravana/: README.md  __init__.py  free_energy.py  graph.py  plasticity.py  pressure.py  propagation.py  pyproject.toml
ravana-v2/: FRAMEWORK_DESIGN.md  GEMINI.md  README.md  ROADMAP.md  __init__.py  debug_commitment.py  pyproject.toml  test_dynamics.py  test_dynamics_check.py
ravana-v2/agent/: SKILL.md  mode_orchestrator.py  ravana_agent_loop.py  test_harness.py
ravana-v2/core/: __init__.py  active_epistemology.py  conversational_repair.py  emotion.py  empathy.py  governor.py  human_memory.py  hypothesis_generation.py  identity.py  meaning.py  memory.py  memory_reconstructor.py  meta2_cognition.py  meta2_integration.py  meta_cognition.py  occam_layer.py  planning.py  predictive_world.py  reality_friction.py  resolution.py  sleep.py  social_epistemology.py  state.py  strategy.py  strategy_learning.py  surgical_probes.py  vector_index.py
ravana-v2/dialogue/: __init__.py  dialogue_engine.py
ravana-v2/docs/plans/: 2026-04-20-zo-agent-orchestration-design.md
ravana-v2/experiments/: meta2_test_env.py  multi_agent_env.py  reality_friction_env.py  runner.py  visualize.py
ravana-v2/experiments/phases/: run_phase_b.py  run_phase_b5.py  run_phase_d.py  run_phase_d5.py  run_phase_e.py  run_phase_f.py  run_phase_f5.py  run_phase_g.py  run_phase_g5.py  run_phase_h.py  run_phase_i.py  run_phase_i2.py  run_phase_i_plus.py  run_phase_j.py
ravana-v2/interface_agent/: SKILL.md
ravana-v2/interface_agent/scripts/: interview_mode.py  llm_interpreter.py  memory_learner.py  ravana_agent.py  ravana_wrapper.py  reality_grounding.py  telegram_reporter.py
ravana-v2/paper/: RAVANA_v2_FINAL_PACKAGE.md  RAVANA_v2_Manuscript.tex
ravana-v2/probes/: constraint_stress.py  exploration_pressure.py  learning_signal.py
ravana-v2/reports/: K1_3_FIX_SUMMARY.md  K2_TUNING_SUCCESS.md  PAPER_MANUSCRIPT_DATA.md
ravana-v2/research/core_k0/: agent_loop_k1_2.py  agent_loop_k1_3.py  agent_loop_k2.py  agent_loop_k3.py  agent_loop_k3_belief.py  checkpoint.py  debug_agent_state.py  env_scheduler.py  k3_research_framework.py  long_horizon_stability_test.py  long_horizon_stability_test_v2.py  metrics.py  run_k0_test.py  run_k1_1_test.py  run_k1_2_multi.py  run_k1_2_test.py  run_k1_test.py  run_k3_research_suite.py  test_k1_3.py  test_k2_breakers.py  test_k2_learning.py  test_k2_robustness.py  test_k3_exp1_isolation.py  test_k3_exp2_coupling.py  test_k3_exp3_metastability.py  test_k3_regime_shift.py  test_k3_trajectory.py  test_latent_regime.py  verify_formula.py
ravana-v2/research/experiments_k0/: classroom_env.py  deceptive_env.py  delayed_env.py  latent_regime_env.py  resource_env.py
ravana-v2/scripts/: classroom_data_pilot.py  generate_student_data.py
ravana-v2/src/ravana_grace/: __init__.py  dev_mode_test.py  runtime.py
ravana-v2/src/ravana_grace/agent/: mode_orchestrator.py  ravana_agent_loop.py  test_runner.py  version_manager.py
ravana-v2/src/ravana_grace/core/: adaptation.py  belief_reasoner.py  cognitive.py  conversational_repair.py  dialogue_context.py  dual_process.py  embedder.py  emotion.py  environment.py  global_workspace.py  human_memory.py  identity.py  intent.py  memory.py  planning.py  resolution.py  runtime.py  sleep.py  state.py  vector_index.py
ravana-v2/src/ravana_grace/dialogue/: dialogue_engine.py
ravana-v2/src/ravana_grace/interface_agent/: requirements.txt
ravana-v2/src/ravana_grace/probes/: constraint_stress.py  exploration_pressure.py  learning_signal.py
ravana-v2/src/ravana_grace/scripts/: classroom_data_pilot.py  consolidate_research.py  generate_student_data.py
ravana-v2/tests/: conftest.py  cross_domain_test.py  metric_ablation_test.py  test_global_workspace.py  test_gra  test_grace_layer.py  test_memory_integration.py  test_mode_orchestrator.py  test_phase_a.py  test_reality_grounding.py  test_runtime_dev_mode.py
ravana-v2/tests/adversarial/: adversarial_bias_test.py  adversarial_safety_test.py
ravana-v2/training/: pipeline.py
ravana/bootstrap/: manager.py
ravana/chat/: __init__.py  __main__.py  interface.py
ravana/cognitive/: __init__.py  framework.py
ravana/core/: __init__.py  belief_store.py  emotion.py  global_workspace.py  identity.py  meta_cognition.py
ravana/decoder/: engine.py
ravana/graph/: __init__.py
ravana/lab/: __init__.py
ravana/language/: __init__.py  basal_ganglia.py  surface_realizer.py
ravana/nn/: __init__.py  functional.py  module.py  rlm.py
ravana/nn/rlm/: relation_predictor.py
ravana/src/ravana/: __init__.py  _numpy_threading.py
ravana/src/ravana/bootstrap/: pmi_seeder.py
ravana/src/ravana/chat/: belief_store.py  brain_regions.py  case_distribution.py  (+24 more)
ravana/web/: learner.py
ravana_ml/: README.md  __init__.py  currencies.py  currency.py  embedder.py  graph.py  plasticity.py  pyproject.toml  tensor.py  tokenizer.py
ravana_ml/lab/: __init__.py
ravana_ml/nn/: __init__.py  module.py  neural_decoder.py  rlm.py  rlm_v2.py  rlm_v2.py.bak
ravana_ml/src/ravana_ml/: __init__.py  currency.py  episode_injector.py  free_energy.py  graph.py  plasticity.py  propagation.py  relation_ontology.py  tensor.py  tokenizer.py  word_tokenizer.py
ravana_ml/world/: __init__.py
(+624 files in other folders)
