[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ravana"
version = "0.3.0"
description = "RAVANA — a decoder-first ML cognitive architecture that learns continuously from conversation and the web (no LLM required)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "RAVANA Project" }]
keywords = ["cognitive-architecture", "decoder-first", "continual-learning", "free-energy", "ml", "neuro-symbolic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.optional-dependencies]
# Heavy / optional dependencies used by some scripts and the web-learning path.
full = [
    "torch>=2.0",
    "requests>=2.31",
    "feedparser>=5.2.1",
    "beautifulsoup4>=4.11",
    "trafilatura>=1.4",
    "nltk>=3.8",
    "networkx>=3.0",
    "sentence-transformers>=2.2",
    "transformers>=4.30",
    "tiktoken>=0.5",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "psutil>=5.9",
    "openai>=1.12",
]
# Everything needed to run the test suite.
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "numpy>=1.23",
    "scipy>=1.9",
]

[project.urls]
Homepage = "https://github.com/ravana-project/ravana"

# ── Three first-party packages live under */src ──
[tool.setuptools]
packages = { find = { where = ["ravana/src", "ravana_ml/src", "ravana-v2/src"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["ravana_ml/src", "ravana/src", "ravana-v2/src", "."]
addopts = "-ra"
markers = [
    "ci: marks tests that run in the fast CI-critical job",
]
