[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ravana-grace"
version = "0.1.2"
description = "RAVANA GRACE -- 27-phase cognitive architecture (Governor, Identity, Sleep, Emotion, World Model, Meaning, Human Memory, Dialogue)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "feedparser",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ravana_grace*"]