[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ravana-chat"
version = "0.3.2"
description = "RAVANA modular package -- decoder-first chat with continuous web learning"
readme = "README.md"
license = {text = "OCL-1.0"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
web = ["requests", "sentence-transformers"]
full = ["requests", "sentence-transformers", "tiktoken"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ravana*"]