[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ravana-ml"
version = "0.1.0"
description = "RAVANA ML Framework -- tensors, modules, ConceptGraph, RLMv1/RLMv2, plasticity, free energy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
]

[tool.setuptools.packages.find]
include = ["ravana_ml*"]